--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nuxt",
-    "build": "nuxt build",
+    "build": "nuxt generate",
     "lint": "eslint --ext js,vue --ignore-path .gitignore .",
     "lint-fix": "eslint --ext js,vue --ignore-path .gitignore --fix ."
   },
@@ -32,8 +32,7 @@
     "@nuxtjs/axios": "^5.10.1",
     "@nuxtjs/vuetify": "^1.11.0",
     "commander": "^5.1.0",
-    "ipfs-http-client": "^44.0.0",
-    "js-ipfs": "0.0.301",
+    "ipfs-http-client": "^44.0.3",
     "mapbox-gl": "^1.9.1",
     "mapbox-gl-inspect": "^1.3.1",
     "moment": "^2.24.0",
