--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nuxtjs/axios": "^5.10.1",
     "@nuxtjs/vuetify": "^1.11.0",
     "commander": "^5.1.0",
+    "fs-extra": "^9.0.0",
     "ipfs-http-client": "^44.0.3",
     "mapbox-gl": "^1.9.1",
     "mapbox-gl-inspect": "^1.3.1",
