--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mapbox-gl": "^1.9.1",
     "mapbox-gl-inspect": "^1.3.1",
     "moment": "^2.24.0",
+    "multipipe": "^4.0.0",
     "nuxt": "^2.12.2",
     "vue-moment": "^4.1.0",
     "vue-truncate-filter": "^1.1.7",
